--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node migration && nodemon app.js",
+    "dev": "node migration && nodemon app.js"
   }
 }
